--- a/bookaflight/Properties/launchSettings.json
+++ b/bookaflight/Properties/launchSettings.json
@@ -12,8 +12,7 @@
     "bookaflight": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7399;http://localhost:5241",
+      "applicationUrl": "http://localhost:39653",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
