--- a/bookaflight/appsettings.json
+++ b/bookaflight/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "devDb": "Server=LOCALHOST;User Id=SA;Password=xhmue3Hvrcmx#; Database=devEnvDb"
+  },
   "AllowedHosts": "*"
 }
 
