--- a/bookaflight/appsettings.json
+++ b/bookaflight/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireDays": "1",
+    "JwtIssuer": "127.0.0.1"
+  },
   "ConnectionStrings": {
     "devDb": "Server=LOCALHOST;User Id=SA;Password=xhmue3Hvrcmx#; Database=devEnvDb"
   },
