changed dev db password and env settings file

--- a/bookaflight/appsettings.Development.json
+++ b/bookaflight/appsettings.Development.json
@@ -3,9 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "devDb": "Server=LOCALHOST;User Id=SA;Password=xhmue3Hvrcmx#; Database=devEnvDb"
     }
+  },
+  "ConnectionStrings": {
+    "devDb": "Server=LOCALHOST;User Id=SA;Password=D3v_E/(/_V; Database=devEnvDb"
   }
 }
