--- a/bookaflight/appsettings.json
+++ b/bookaflight/appsettings.json
@@ -11,7 +11,7 @@
     "JwtIssuer": "127.0.0.1"
   },
   "ConnectionStrings": {
-    "devDb": "Server=LOCALHOST;User Id=SA;Password=xhmue3Hvrcmx#; Database=devEnvDb"
+    "devDb": "Server=;User Id=app;Password=; Database="
   },
   "AllowedHosts": "*"
 }
