--- a/bookaflight/BookAFlight.csproj
+++ b/bookaflight/BookAFlight.csproj
@@ -44,4 +44,7 @@
     <Folder Include="Services\" />
     <Folder Include="Exceptions\" />
   </ItemGroup>
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\NotFound.cshtml" />
+  </ItemGroup>
 </Project>
